--- a/Example/Podfile
+++ b/Example/Podfile
@@ -2,7 +2,7 @@ source 'https://github.com/CocoaPods/Specs.git'
 use_frameworks!
 
 target 'Scale_Example', :exclusive => true do
-  pod "Scale", :path => "../"
+  pod "Scale", :path => ""
 end
 
 target 'Scale_Tests', :exclusive => true do
